--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -176,6 +176,10 @@
     <Compile Include="Migrations\201706161827255_asdfk.Designer.cs">
       <DependentUpon>201706161827255_asdfk.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707090338489_Ads.cs" />
+    <Compile Include="Migrations\201707090338489_Ads.Designer.cs">
+      <DependentUpon>201707090338489_Ads.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -184,6 +188,7 @@
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -269,6 +274,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706161827255_asdfk.resx">
       <DependentUpon>201706161827255_asdfk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707090338489_Ads.resx">
+      <DependentUpon>201707090338489_Ads.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
