--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -260,6 +260,7 @@
     <Content Include="Views\User\Create.cshtml" />
     <Content Include="Views\Order\Create.cshtml" />
     <Content Include="Views\Home\ListOfAllUser.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
