JQuery-Child Selector-select class instance under a specific class and ignore rest of the same class instance

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -261,6 +262,7 @@
     <Content Include="Views\Order\Create.cshtml" />
     <Content Include="Views\Home\ListOfAllUser.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Song\ChildSelector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
