@JSON.Encode for True and true compare in Javascript for data coming from Model

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -182,6 +182,14 @@
     <Compile Include="Migrations\201707090338489_Ads.Designer.cs">
       <DependentUpon>201707090338489_Ads.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707161948376_df.cs" />
+    <Compile Include="Migrations\201707161948376_df.Designer.cs">
+      <DependentUpon>201707161948376_df.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707161956328_dfh.cs" />
+    <Compile Include="Migrations\201707161956328_dfh.Designer.cs">
+      <DependentUpon>201707161956328_dfh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -283,6 +291,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707090338489_Ads.resx">
       <DependentUpon>201707090338489_Ads.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161948376_df.resx">
+      <DependentUpon>201707161948376_df.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161956328_dfh.resx">
+      <DependentUpon>201707161956328_dfh.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
