--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -196,11 +196,21 @@
     <Compile Include="Migrations\201707192003414_df1.Designer.cs">
       <DependentUpon>201707192003414_df1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707220618002_sdfgg.cs" />
+    <Compile Include="Migrations\201707220618002_sdfgg.Designer.cs">
+      <DependentUpon>201707220618002_sdfgg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707220636048_sdfggk.cs" />
+    <Compile Include="Migrations\201707220636048_sdfggk.Designer.cs">
+      <DependentUpon>201707220636048_sdfggk.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
     <Compile Include="Models\CourseEnumsModel.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\DropDownViewModel.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -308,6 +318,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707192003414_df1.resx">
       <DependentUpon>201707192003414_df1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707220618002_sdfgg.resx">
+      <DependentUpon>201707220618002_sdfgg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707220636048_sdfggk.resx">
+      <DependentUpon>201707220636048_sdfggk.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
