--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CourseEnumsController.cs" />
     <Compile Include="Controllers\DropDownController.cs" />
+    <Compile Include="Controllers\EmpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
@@ -204,12 +205,23 @@
     <Compile Include="Migrations\201707220636048_sdfggk.Designer.cs">
       <DependentUpon>201707220636048_sdfggk.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707221641335_as.cs" />
+    <Compile Include="Migrations\201707221641335_as.Designer.cs">
+      <DependentUpon>201707221641335_as.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707221646247_kj.cs" />
+    <Compile Include="Migrations\201707221646247_kj.Designer.cs">
+      <DependentUpon>201707221646247_kj.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
     <Compile Include="Models\CourseEnumsModel.cs" />
     <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Depot.cs" />
     <Compile Include="Models\DropDownViewModel.cs" />
+    <Compile Include="Models\Emp.cs" />
+    <Compile Include="Models\EmpDepotViewModel.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -290,6 +302,7 @@
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Song\ChildSelector.cshtml" />
     <Content Include="Views\Home\Shows.cshtml" />
+    <Content Include="Views\Emp\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -326,6 +339,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707220636048_sdfggk.resx">
       <DependentUpon>201707220636048_sdfggk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707221641335_as.resx">
+      <DependentUpon>201707221641335_as.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707221646247_kj.resx">
+      <DependentUpon>201707221646247_kj.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
