DropdownList ViewBag Property

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -162,7 +162,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CourseEnumsController.cs" />
     <Compile Include="Controllers\DropDownController.cs" />
-    <Compile Include="Controllers\EmpController.cs" />
+    <Compile Include="Controllers\DepotController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
@@ -302,7 +302,7 @@
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Song\ChildSelector.cshtml" />
     <Content Include="Views\Home\Shows.cshtml" />
-    <Content Include="Views\Emp\Create.cshtml" />
+    <Content Include="Views\Depot\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
