--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\CourseEnumsController.cs" />
     <Compile Include="Controllers\DropDownController.cs" />
     <Compile Include="Controllers\DepotController.cs" />
@@ -213,6 +214,18 @@
     <Compile Include="Migrations\201707221646247_kj.Designer.cs">
       <DependentUpon>201707221646247_kj.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707222053550_kje.cs" />
+    <Compile Include="Migrations\201707222053550_kje.Designer.cs">
+      <DependentUpon>201707222053550_kje.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707222054585_kjeede.cs" />
+    <Compile Include="Migrations\201707222054585_kjeede.Designer.cs">
+      <DependentUpon>201707222054585_kjeede.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707222226232_kjeji.cs" />
+    <Compile Include="Migrations\201707222226232_kjeji.Designer.cs">
+      <DependentUpon>201707222226232_kjeji.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -228,8 +241,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MyViewModel.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Parking.cs" />
     <Compile Include="Models\Rain.cs" />
     <Compile Include="Models\Song.cs" />
+    <Compile Include="Models\Company.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -303,6 +318,7 @@
     <Content Include="Views\Song\ChildSelector.cshtml" />
     <Content Include="Views\Home\Shows.cshtml" />
     <Content Include="Views\Depot\Index.cshtml" />
+    <Content Include="Views\Company\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -345,6 +361,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707221646247_kj.resx">
       <DependentUpon>201707221646247_kj.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222053550_kje.resx">
+      <DependentUpon>201707222053550_kje.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222054585_kjeede.resx">
+      <DependentUpon>201707222054585_kjeede.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222226232_kjeji.resx">
+      <DependentUpon>201707222226232_kjeji.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
