--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -230,6 +230,10 @@
     <Compile Include="Migrations\201707222255177_sdergd.Designer.cs">
       <DependentUpon>201707222255177_sdergd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707222308526_sdergdkl.cs" />
+    <Compile Include="Migrations\201707222308526_sdergdkl.Designer.cs">
+      <DependentUpon>201707222308526_sdergdkl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -377,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707222255177_sdergd.resx">
       <DependentUpon>201707222255177_sdergd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222308526_sdergdkl.resx">
+      <DependentUpon>201707222308526_sdergdkl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
