Email Address as OutLook Link

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -234,6 +234,14 @@
     <Compile Include="Migrations\201707222308526_sdergdkl.Designer.cs">
       <DependentUpon>201707222308526_sdergdkl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707222318527_cd.cs" />
+    <Compile Include="Migrations\201707222318527_cd.Designer.cs">
+      <DependentUpon>201707222318527_cd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707222321136_ckd.cs" />
+    <Compile Include="Migrations\201707222321136_ckd.Designer.cs">
+      <DependentUpon>201707222321136_ckd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -327,6 +335,7 @@
     <Content Include="Views\Home\Shows.cshtml" />
     <Content Include="Views\Depot\Index.cshtml" />
     <Content Include="Views\Company\Index.cshtml" />
+    <Content Include="Views\Company\Display.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -384,6 +393,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707222308526_sdergdkl.resx">
       <DependentUpon>201707222308526_sdergdkl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222318527_cd.resx">
+      <DependentUpon>201707222318527_cd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707222321136_ckd.resx">
+      <DependentUpon>201707222321136_ckd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
