--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -242,6 +242,10 @@
     <Compile Include="Migrations\201707222321136_ckd.Designer.cs">
       <DependentUpon>201707222321136_ckd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707230043483_cgrt.cs" />
+    <Compile Include="Migrations\201707230043483_cgrt.Designer.cs">
+      <DependentUpon>201707230043483_cgrt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseEnums.cs" />
@@ -399,6 +403,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707222321136_ckd.resx">
       <DependentUpon>201707222321136_ckd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707230043483_cgrt.resx">
+      <DependentUpon>201707230043483_cgrt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
