RESTRICT Partial View to use the Layout FIle

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -405,6 +405,7 @@
     <Content Include="Views\Genre\Display.cshtml" />
     <Content Include="Views\Genre\_AllGenre.cshtml" />
     <Content Include="Views\Shared\_Temp.cshtml" />
+    <Content Include="Views\Home\_TempPartialView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
