--- a/WebApplication3/Views/Web.config
+++ b/WebApplication3/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="WebApplication3.CustomHtmlHelpers" />
         <add namespace="WebApplication3" />
+        <add namespace="WebApplication3.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
