--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\CourseEnumsController.cs" />
     <Compile Include="Controllers\DropDownController.cs" />
@@ -273,8 +274,13 @@
     <Compile Include="Migrations\201707250146036_acr.Designer.cs">
       <DependentUpon>201707250146036_acr.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707312045045_gh.cs" />
+    <Compile Include="Migrations\201707312045045_gh.Designer.cs">
+      <DependentUpon>201707312045045_gh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\City.cs" />
     <Compile Include="Models\CourseEnums.cs" />
     <Compile Include="Models\CourseEnumsModel.cs" />
     <Compile Include="Models\Department.cs" />
@@ -422,6 +428,7 @@
     <Content Include="Views\Shared\_Temp.cshtml" />
     <Content Include="Views\Home\_TempPartialView.cshtml" />
     <Content Include="Views\Parking\Index.cshtml" />
+    <Content Include="Views\City\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -500,6 +507,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707250146036_acr.resx">
       <DependentUpon>201707250146036_acr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707312045045_gh.resx">
+      <DependentUpon>201707312045045_gh.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
