--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -429,6 +429,7 @@
     <Content Include="Views\Home\_TempPartialView.cshtml" />
     <Content Include="Views\Parking\Index.cshtml" />
     <Content Include="Views\City\List.cshtml" />
+    <Content Include="Views\Home\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
