--- a/WebApplication3/bin/WebApplication3.dll.config
+++ b/WebApplication3/bin/WebApplication3.dll.config
@@ -18,6 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On"></customErrors>
     <globalization culture="en-us" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
