--- a/WebApplication3/bin/WebApplication3.dll.config
+++ b/WebApplication3/bin/WebApplication3.dll.config
@@ -18,7 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On"></customErrors>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Error/NotFound"/>
+    </customErrors>
     <globalization culture="en-us" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
