Best Practice-Cache Profile web.config

--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -18,6 +18,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="1MinuteCache" duration="60" varyByParam="*"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
     <customErrors mode="On">
       <error statusCode="404" redirect="~/Error/NotFound"/>
     </customErrors>
