--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\DropDownController.cs" />
     <Compile Include="Controllers\DepotController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\FormController.cs" />
     <Compile Include="Controllers\GenreController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -283,6 +284,10 @@
     <Compile Include="Migrations\201708020554088_er.Designer.cs">
       <DependentUpon>201708020554088_er.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708030127078_wer.cs" />
+    <Compile Include="Migrations\201708030127078_wer.Designer.cs">
+      <DependentUpon>201708030127078_wer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\City.cs" />
@@ -294,6 +299,7 @@
     <Compile Include="Models\Emp.cs" />
     <Compile Include="Models\EmpDepotViewModel.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Form.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -436,6 +442,7 @@
     <Content Include="Views\City\List.cshtml" />
     <Content Include="Views\Shared\NotFound.cshtml" />
     <Content Include="Views\Home\Htmlcontent.cshtml" />
+    <Content Include="Views\Form\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -521,6 +528,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708020554088_er.resx">
       <DependentUpon>201708020554088_er.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708030127078_wer.resx">
+      <DependentUpon>201708030127078_wer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
