--- a/WebApplication3/bin/WebApplication3.dll.config
+++ b/WebApplication3/bin/WebApplication3.dll.config
@@ -25,7 +25,7 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="On">
+    <customErrors mode="RemoteOnly">
       <error statusCode="404" redirect="~/Error/NotFound"/>
     </customErrors>
     <globalization culture="en-us" />
