--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -288,6 +288,10 @@
     <Compile Include="Migrations\201708030127078_wer.Designer.cs">
       <DependentUpon>201708030127078_wer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708031658576_wer1.cs" />
+    <Compile Include="Migrations\201708031658576_wer1.Designer.cs">
+      <DependentUpon>201708031658576_wer1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\City.cs" />
@@ -531,6 +535,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708030127078_wer.resx">
       <DependentUpon>201708030127078_wer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708031658576_wer1.resx">
+      <DependentUpon>201708031658576_wer1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
