--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -292,6 +292,10 @@
     <Compile Include="Migrations\201708031658576_wer1.Designer.cs">
       <DependentUpon>201708031658576_wer1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708041301037_fgfse.cs" />
+    <Compile Include="Migrations\201708041301037_fgfse.Designer.cs">
+      <DependentUpon>201708041301037_fgfse.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\City.cs" />
@@ -313,6 +317,7 @@
     <Compile Include="Models\Rain.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\Student.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -378,6 +383,8 @@
     <None Include="Scripts\jquery-1.12.4-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -447,6 +454,8 @@
     <Content Include="Views\Shared\NotFound.cshtml" />
     <Content Include="Views\Home\Htmlcontent.cshtml" />
     <Content Include="Views\Form\Create.cshtml" />
+    <Content Include="Views\Shared\_Student.cshtml" />
+    <Content Include="Views\Home\PartialViewContainer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -538,6 +547,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708031658576_wer1.resx">
       <DependentUpon>201708031658576_wer1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708041301037_fgfse.resx">
+      <DependentUpon>201708041301037_fgfse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
