--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -326,6 +326,10 @@
     <Compile Include="Migrations\201708081609106_sdfdfgqwfdlsdf.Designer.cs">
       <DependentUpon>201708081609106_sdfdfgqwfdlsdf.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708101934065_asdf1.cs" />
+    <Compile Include="Migrations\201708101934065_asdf1.Designer.cs">
+      <DependentUpon>201708101934065_asdf1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Children.cs" />
@@ -495,6 +499,8 @@
     <Content Include="Views\Home\PartialViewContainer.cshtml" />
     <Content Include="Views\Home\Sent.cshtml" />
     <Content Include="Views\Document\Create.cshtml" />
+    <Content Include="Views\Shared\_SideBar.cshtml" />
+    <Content Include="Views\Shared\_LoggedInLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -610,6 +616,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708081609106_sdfdfgqwfdlsdf.resx">
       <DependentUpon>201708081609106_sdfdfgqwfdlsdf.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708101934065_asdf1.resx">
+      <DependentUpon>201708101934065_asdf1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
