Added focus active on selected tab

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -501,6 +501,10 @@
     <Content Include="Views\Document\Create.cshtml" />
     <Content Include="Views\Shared\_SideBar.cshtml" />
     <Content Include="Views\Shared\_LoggedInLayout.cshtml" />
+    <Content Include="Views\Home\Resume.cshtml" />
+    <Content Include="Views\Home\CoverLetter.cshtml" />
+    <Content Include="Views\Home\Account.cshtml" />
+    <Content Include="Views\Home\Rewards.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
