--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -331,6 +331,10 @@
     <Compile Include="Migrations\201708101934065_asdf1.Designer.cs">
       <DependentUpon>201708101934065_asdf1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708111927471_sadtfwqre.cs" />
+    <Compile Include="Migrations\201708111927471_sadtfwqre.Designer.cs">
+      <DependentUpon>201708111927471_sadtfwqre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Children.cs" />
@@ -349,6 +353,7 @@
     <Compile Include="Models\Form.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Industry.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MyViewModel.cs" />
     <Compile Include="Models\Order.cs" />
@@ -360,6 +365,7 @@
     <Compile Include="Models\Standard.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\Website.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -624,6 +630,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708101934065_asdf1.resx">
       <DependentUpon>201708101934065_asdf1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708111927471_sadtfwqre.resx">
+      <DependentUpon>201708111927471_sadtfwqre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
