--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\CourseEnumsController.cs" />
+    <Compile Include="Controllers\CoverLetterController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\DropDownController.cs" />
     <Compile Include="Controllers\DepotController.cs" />
@@ -193,6 +194,7 @@
     <Compile Include="Controllers\SongController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="CustomHtmlHelpers\CustomHtmlHelpers.cs" />
+    <Compile Include="CustomValidation\FileConstraint.cs" />
     <Compile Include="Extension\Helper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -366,6 +368,7 @@
     <Compile Include="Models\CopyPageViewModel.cs" />
     <Compile Include="Models\CourseEnums.cs" />
     <Compile Include="Models\CourseEnumsModel.cs" />
+    <Compile Include="Models\CoverLetter.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Depot.cs" />
     <Compile Include="Models\Document.cs" />
@@ -396,6 +399,7 @@
     <Compile Include="Models\Website.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\CoverLetterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client Scripts\mvcfoolproof.unobtrusive.js" />
@@ -554,6 +558,7 @@
     <Content Include="Views\Role\Create.cshtml" />
     <Content Include="Views\Home\ForManager.cshtml" />
     <Content Include="Views\Home\ForOwner.cshtml" />
+    <Content Include="Views\CoverLetter\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
