--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -386,6 +386,26 @@
     <Compile Include="Migrations\201708271647001_csa.Designer.cs">
       <DependentUpon>201708271647001_csa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708280457411_csasdf.cs" />
+    <Compile Include="Migrations\201708280457411_csasdf.Designer.cs">
+      <DependentUpon>201708280457411_csasdf.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708280459539_csasdflk.cs" />
+    <Compile Include="Migrations\201708280459539_csasdflk.Designer.cs">
+      <DependentUpon>201708280459539_csasdflk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708280506422_csasdflkjk.cs" />
+    <Compile Include="Migrations\201708280506422_csasdflkjk.Designer.cs">
+      <DependentUpon>201708280506422_csasdflkjk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708280513506_asdfwe.cs" />
+    <Compile Include="Migrations\201708280513506_asdfwe.Designer.cs">
+      <DependentUpon>201708280513506_asdfwe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708280516330_asdfwesd.cs" />
+    <Compile Include="Migrations\201708280516330_asdfwesd.Designer.cs">
+      <DependentUpon>201708280516330_asdfwesd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Camera.cs" />
@@ -748,6 +768,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708271647001_csa.resx">
       <DependentUpon>201708271647001_csa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708280457411_csasdf.resx">
+      <DependentUpon>201708280457411_csasdf.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708280459539_csasdflk.resx">
+      <DependentUpon>201708280459539_csasdflk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708280506422_csasdflkjk.resx">
+      <DependentUpon>201708280506422_csasdflkjk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708280513506_asdfwe.resx">
+      <DependentUpon>201708280513506_asdfwe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708280516330_asdfwesd.resx">
+      <DependentUpon>201708280516330_asdfwesd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
